--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,19 +8,20 @@ on:
       - master
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
         with:
           go-version: '1.20'
 
-      - name: Build
-        run: make build
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Test
+        run: go test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
