--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test
-        run: go test
+        run: go test -v ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
