--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
           go-version-file: "go.mod"
 
       - name: Download Go modules
+        shell: bash
         if: ${{ steps.setup-go.outputs.cache-hit != 'true' }}
         run: go mod download
 
