--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
   test:
 
-    runs-on: macos-13
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
@@ -21,6 +21,7 @@ jobs:
         run: go mod download
 
       - name: Test
+        shell: 'script -q -e -c "bash {0}"'
         run: go test -v ./...
 
       - name: Upload coverage reports to Codecov
