--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,9 @@ jobs:
 
       - name: Test
         shell: 'script -q -e -c "bash {0}"'
-        run: go test -v ./...
+        run: |
+          export TERM="xterm-256color"
+          go test -v ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
