--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,10 +21,7 @@ jobs:
         run: go mod download
 
       - name: Test
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          export TERM="xterm-256color"
-          go test -v ./...
+        run: go test -cover -coverprofile=cover.out
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
