--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,11 +20,11 @@ jobs:
       - name: Download Go modules
         run: go mod download
 
-      - name: Setup faketty
-        uses: Yuri6037/Action-FakeTTY@v1.1
-
       - name: Test
-        run: faketty go test -cover -coverprofile=cover.out
+        shell: 'script -q -e -c "stty cols 200 rows 100; bash {0}"'
+        run: |
+          export TERM="xterm-256color"
+          go test -v ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
