--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,7 @@ jobs:
         shell: 'script -q -e -c "stty cols 200 rows 100; bash {0}"'
         run: |
           export TERM="xterm-256color"
-          go test -v ./...
+          go test -cover -coverprofile=cover.out
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
